<resources>
    <string name="app_name">Appwrk Demo Application</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="full_description_of_the_item">Full description of the item</string>
    <string name="item_title">Item title</string>
    <string name="detail_screen">Detail screen</string>
    <string name="home_list_screen">Home list screen</string>
    <string name="item_1_title">Item 1 title</string>
    <string name="short_description">Short description</string>
    <string name="go_back">Go Back</string>
</resources>